[package]
name = "admin"
version = "0.1.1"
authors = ["Brian Taylor <brian@resolvingarchitecture.io>"]
license-file = "LICENSE"
edition = "2018"
description = "Administrative support for RA crates."
homepage = "http://resolvingarchitecture.io"
documentation = "https://github.com/resolvingarchitecture/admin"
repository = "https://github.com/resolvingarchitecture/admin"
publish = true
readme = "README.md"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.8"

rocket = "0.4.3"

ra_common = "0.0.5"

#[dependencies.rocket_contrib]
#version = "0.4.3"
#default-features = false
#features = ["serve"]

[dev-dependencies]
assert_cmd = "0.10"